--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
+    "@formspree/react": "^2.4.0",
     "@headlessui/react": "^1.7.0",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.8",
